--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.6.1",
-    "metro4": "^4.1.2",
+    "jquery": "^3.3.1",
+    "metro4": "^4.1.3",
+    "node-rest-client": "^3.1.0",
+    "office-ui-fabric-react": "^5.69.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fa": "^5.0.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
+    "react-sound": "^1.1.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0"
