--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,6 +1,6 @@
 {
   "connectionSettings": {
-    "authData": {},
+    "authData": { "user": "guest", "password": "1" },
     "url": "http://teamcity.jetbrains.com/"
   },
   "appSettings": {
