--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.6.1",
+    "cors": "^2.8.4",
     "jquery": "^3.3.1",
     "metro4": "^4.1.3",
     "node-rest-client": "^3.1.0",
