--- a/package.json
+++ b/package.json
@@ -4,23 +4,27 @@
   "private": true,
   "dependencies": {
     "animate.css": "^3.6.1",
+    "axios": "^0.18.0",
+    "concurrently": "^3.5.1",
     "cors": "^2.8.4",
-    "jquery": "^3.3.1",
-    "metro4": "^4.1.3",
+    "material-ui": "^0.20.0",
     "node-rest-client": "^3.1.0",
-    "office-ui-fabric-react": "^5.69.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fa": "^5.0.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-sound": "^1.1.0",
+    "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-ui": "react-scripts start",
+    "start-server": "node server",
+    "start": "concurrently --kill-others \"react-scripts start\" \"node server\"",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
