--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "concurrently": "^3.5.1",
     "cors": "^2.8.4",
     "material-ui": "^0.20.0",
+    "moment": "^2.21.0",
     "node-rest-client": "^3.1.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-fa": "^5.0.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.1",
+    "react-scripts": "^1.1.1",
     "react-sound": "^1.1.0",
     "reactstrap": "^5.0.0",
     "redux": "^3.7.2",
